deployment/kube-manifests/app/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: linux-web
  name: linux-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: linux-web
  template:
    metadata:
      labels:
        app: linux-web
      name: linux-web
    spec:
      containers:
        - name: linux-web
          image: ghodrat/aspnet-sample-private
      nodeSelector:
        kubernetes.io/os: linux
