deployment/kube-manifests/app/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linux-web
  labels:
    app: linux-web
spec:
  ports:
    - port: 8000
      targetPort: 80
  selector:
    app: linux-web
  type: NodePort
